# Truelarge-RT

./: .gitignore  LICENSE  MOE_PLAN.md  PLAN.md  README.md  m.md
.github/workflows/: android-build.yml
app/: build.gradle.kts  gradlew  gradlew.bat  proguard-rules.pro  settings.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GGUFHeaderParser.cpp  GGUFHeaderParser.h  LayerLoader.cpp  LayerLoader.h  LayerScheduler.cpp  LayerScheduler.h  LayerWeights.h  TrueLargeRuntime.cpp  TrueLargeRuntime.h  WeightBuffer.cpp  WeightBuffer.h  native-lib.cpp
app/src/main/java/com/truelarge/runtime/: MainActivity.kt  NativeEngine.kt
app/src/main/java/com/truelarge/runtime/data/: HuggingFaceApi.kt  ModelInfo.kt  ModelRepository.kt
app/src/main/java/com/truelarge/runtime/download/: DownloadWorker.kt  ModelDownloadManager.kt
app/src/main/java/com/truelarge/runtime/ui/: BenchmarkScreen.kt  CatalogScreen.kt  DownloadScreen.kt  SearchScreen.kt  Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: architecture-review.md  layer-by-layer-implementation.md
models/: download_32b.py
scripts/: README.md  optimize_images.py
